--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
   <header class="header">
     <div class="container"> 
       <div class="header__row">
-        <h1 class="header__logo"><img src="assets/img/logo.png" alt="logo"></h1>
+        <h1 class="header__logo"><img src="assets/img/header/logo.png" alt="logo"></h1>
       <p class="header__city">Остекление балконов и лоджий
        в Москве и Московской области</p>
-      <button class="header__call"><img src="assets/img/call.png"> <span>Вызвать замерщика</span></button>
+      <button class="header__call"><img src="assets/img/header/call.png"> <span>Вызвать замерщика</span></button>
       <div class="header__time">
-        <img src="assets/img/clock.png" alt="clock">
+        <img src="assets/img/header/clock.png" alt="clock">
         <div class="header__time--timer">
           <p>без выходных</p>
           <p>9:00-18:00</p>
         </div>   
       </div>
      <div class="header__phone">
-       <img src="assets/img/phone.png" alt="">
+       <img src="assets/img/header/phone.png" alt="">
        <div class="header__phone--anchor">
          <a href="tel:+74956466171" class="header__phone--anchor--black">+7(495)646-61-71</a>
         <a href="#" class="header__phone--anchor--blue">Заказать обратный звонок</a>
@@ -33,5 +33,42 @@
     </div>   
     </div> 
   </header>
+  <main class="main">
+    <div class="container">
+      <div class="main__row">
+        <div class="main__caption">
+        <div class="main__heading">
+          <h2>Остекление балконов "под ключ"</h2>
+          <p class="main__price">за 12 800 рублей!</p>
+        </div>
+        <div class="main__advantages">
+          <div class="main__features">
+            <img src="assets/img/main/quality.png" alt="#">
+            <p class="main__feature">Высокое качество</p>
+            
+          </div>
+          <div class="main__features">
+            <img src="assets/img/main/oclock.png" alt="#">
+            <p class="main__feature">Быстрый монтаж</p>
+          </div>
+          <div class="main__features">
+            <img src="assets/img/main/star.png" alt="#">
+            <p class="main__feature">Гарантия 3 года</p>
+          </div>
+          <div class="main__features">
+            <img src="assets/img/main/garbage.png" alt="#">
+            <p class="main__feature">Вывоз мусора</p>
+          </div>
+        </div>
+      </div>
+      <div class="main__form">
+        <form action=""></form>
+      </div>
+    </div>
+    </div>
+  </main>
+  <section class="selection">
+    
+  </section>
 </body>
 </html>
