--- a/index.html
+++ b/index.html
@@ -43,28 +43,34 @@
         </div>
         <div class="main__advantages">
           <div class="main__features">
-            <img src="assets/img/main/quality.png" alt="#">
+            <img class="main__features--img-big" src="assets/img/main/quality.png" alt="#">
             <p class="main__feature">Высокое качество</p>
             
           </div>
           <div class="main__features">
-            <img src="assets/img/main/oclock.png" alt="#">
+            <img class="main__features--img-big" src="assets/img/main/oclock.png" alt="#">
             <p class="main__feature">Быстрый монтаж</p>
           </div>
           <div class="main__features">
-            <img src="assets/img/main/star.png" alt="#">
+            <img class="main__features--img" src="assets/img/main/star.png" alt="#">
             <p class="main__feature">Гарантия 3 года</p>
           </div>
           <div class="main__features">
-            <img src="assets/img/main/garbage.png" alt="#">
+            <img class="main__features--img" src="assets/img/main/garbage.png" alt="#">
             <p class="main__feature">Вывоз мусора</p>
           </div>
         </div>
       </div>
       <div class="main__form">
-        <form action=""></form>
+            <h2 class="main__heading">Запишитесь сегодня на <span>бесплатный замер</span> </h2>
+          <form action="#" method="POST">
+            <input type="text" placeholder="Введите ваше имя">
+            <input type="phone" placeholder="+7(___)__-__">
+            <button class="main__button">Вызвать замерщика!</button>
+          </form>
+          <p>Ваши данные конфиденциальны</p>
+          </div>
       </div>
-    </div>
     </div>
   </main>
   <section class="selection">
