--- a/index.html
+++ b/index.html
@@ -74,7 +74,68 @@
     </div>
   </main>
   <section class="selection">
-    
+    <div class="container">
+      <h2 class="selection__caption">Остекление балконов и лоджий</h2>
+      <div class="selection__row">
+        <div class="selection__glazing">
+          <img src="assets/img/glazing/1.png" alt="#">
+          <a href="#">Деревянное остекление</a>
+        </div>
+        <div class="selection__glazing">
+          <img src="assets/img/glazing/2.png" alt="#">
+          <a href="#">Алюминиевое остекление</a>
+        </div>
+        <div class="selection__glazing">
+          <img src="assets/img/glazing/3.png" alt="#">
+          <a href="#">Остекление пластиковыми рамами</a>
+        </div>
+        <div class="selection__glazing">
+          <img src="assets/img/glazing/4.png" alt="#">
+          <a href="#">Французское остекление (панорамное)</a>
+        </div>
+        <div class="selection__glazing">
+          <img src="assets/img/glazing/5.png" alt="#">
+          <a href="#">Остекление с выносом</a>
+        </div>
+      </div>
+      <div class="selection__choice">
+        <div class="selection__cold">
+          <h2>Холодное</h2>
+          <img src="assets/img/glazing/warmcold/img_cold.png" alt="#">
+          <ul>
+            <li>Конструктивная толщина 42-58мм</li>
+            <li>Остекление: полированное стекло(толщиной 4-5мм)</li>
+            <li>Теплоизоляция 0,07 м2 * C/Вт</li>
+            <li>Звукоизоляция 20-27дб</li>
+          </ul>
+          <div class="selection__wrapper">
+           <div class="selection__price">
+            <p>2600 руб. кв.м</p> 
+            <p>под ключ с установкой</p>
+          </div>
+           <button class="selection__btn">Рассчитать стоимость</button>
+          </div>
+        </div>
+        <div class="selection__warm">
+          <h2>Теплое</h2>
+          <img src="assets/img/glazing/warmcold/img_warm.png" alt="#">
+          <ul>
+            <li>Конструктивная толщина 58-78мм</li>
+            <li>Остекление: однокамерные и двукамерные стеклопакеты</li>
+            <li>Теплоизоляция 0,63-1,05 м2 * C/Вт</li>
+            <li>Звукоизоляция до 5 класса</li>
+          </ul>
+          <div class="selection__wrapper">
+            <div class="selection__price">
+               <p> 4000 руб. кв.м</p>
+          <p>под ключ с установкой</p>
+        </div>
+          <button class="selection__btn">Рассчитать стоимость</button>
+        </div>
+          
+        </div>
+      </div>
+    </div>
   </section>
 </body>
 </html>
