Create guarantee, payment, action and contacts

--- a/index.html
+++ b/index.html
@@ -227,6 +227,136 @@
       </div>
     </div>
   </section>
+  <section class="guarantee">
+    <div class="container">
+      <h2 class="guarantee_caption">Мы гарантируем вам</h2>
+      <div class="guarantee__wrapper">
+        <div class="guarantee__feauture">
+          <img src="assets/img/guarantee/1.png" alt="#">
+          <p>Высокое качество</p>
+        </div>
+        <div class="guarantee__feauture">
+          <img src="assets/img/guarantee/2.png" alt="#">
+          <p>Выполнение работ под ключ</p>
+        </div>
+        <div class="guarantee__feauture">
+          <img src="assets/img/guarantee/3.png" alt="#">
+          <p>Монтаж в&nbsp;короткие сроки</p>
+        </div>
+        <div class="guarantee__feauture">
+          <img src="assets/img/guarantee/4.png" alt="#">
+          <p>Цены  от&nbsp;производителя</p>
+        </div>
+        <div class="guarantee__feauture">
+          <img src="assets/img/guarantee/5.png" alt="#">
+          <p>Бесплатный замер и консультацию</p>
+        </div>
+        <div class="guarantee__feauture">
+          <img src="assets/img/guarantee/6.png" alt="#">
+          <p>Тепло и уют на&nbsp;балконе</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="payment">
+    <div class="container">
+      <h2 class="payment__caption">Вы можете оплатить наши услуги:</h2>
+      <div class="payment__wrapper">
+        <div class="payment__pay">
+          <img src="assets/img/payment/wallet.png" alt="#">
+          <p>Наличными</p>
+        </div>
+        <div class="payment__pay">
+          <img src="assets/img/payment/credit-card.png" alt="#">
+          <p>Банковской картой</p>
+        </div>
+        <div class="payment__pay">
+          <img src="assets/img/payment/museum.png" alt="#">
+          <p>Безналичный расчет</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="action">
+    <div class="container">
+      <div class="action__wrapper">
+        <div class="action__column1">
+        <h2 class="action__caption">Акция - 60%</h2>
+        <p>Успей сэкономить на остеклении!</p>
+        <p>Только до 23 апреля!</p>
+        <div class="action__wrap">
+          <h4>До завершения акции:</h4>
+          <div class="action__counter">
+            <div class="action__days">
+            <span>01</span>
+            <p>дней</p>
+          </div>
+          <div class="action__hour">
+            <span>13</span>
+            <p>часов</p>
+          </div>
+          <div class="action__minutes">
+            <span>40</span>
+            <p>минут</p>
+          </div>
+          <div class="action__seconds">
+            <span>45</span>
+            <p>секунд</p>
+          </div>
+        </div> 
+        </div>
+      </div>    
+         <div class="action__column2">
+        <div class="main__form">
+          <h2 class="main__heading">Запишитесь сегодня на <span>бесплатный замер</span> </h2>
+          <form action="#" method="POST">
+            <input type="text" placeholder="Введите ваше имя">
+            <input type="phone" placeholder="+7(___)__-__">
+            <button class="main__button">Вызвать замерщика!</button>
+          </form>
+          <p>Ваши данные конфиденциальны</p>
+        </div>
+      </div>
+      </div>
+    </div>
+  </section>
+  <section class="contacts">
+    <div class="container">
+      <h2 class="selection__caption">Как нас найти</h2>
+      <div class="contacts__wrapper">
+        <div class="contacts__map">
+          <a href="https://yandex.ru/maps/?um=constructor%3Ae7afff4def13c94bf371385734674f84ab517c3cfb0e62a15af3628159f69e5d&amp;source=constructorStatic"
+            target="_blank"><img
+              src="https://api-maps.yandex.ru/services/constructor/1.0/static/?um=constructor%3Ae7afff4def13c94bf371385734674f84ab517c3cfb0e62a15af3628159f69e5d&amp;width=570&amp;height=450&amp;lang=ru_RU"
+              alt="" style="border: 0;" /></a>
+        </div>
+        <div class="contacts__address">
+          <ul>
+            <li>
+              <h4 class="contacts__address--blue">Юридический адрес:</h4>
+              <p class="contacts__address--black">ООО "ИРВАС", 127411, г. Москва, Дмитровское шоссе&nbsp;,&nbsp;д. 125, корпус 1</p>
+            </li>
+            <li>
+              <h4 class="contacts__address--blue">Фактический адрес:</h4>
+              <p class="contacts__address--black">ООО "ИРВАС", 141031, МО, Мытищинский р-он, п.&nbsp;Вешки, Выставочная, д. 53</p>
+            </li>
+            <li>
+              <h4 class="contacts__address--blue">Телефон:</h4>
+              <p class="contacts__address--black">+7(495)646-61-71 <span>(многоканальный)</span></p>
+            </li>
+            <li>
+              <h4 class="contacts__address--blue">E-mail:</h4>
+              <p class="contacts__address--black"><a href="#">info@irvasokna.ru</a> </p>
+            </li>
+            <li>
+              <h4 class="contacts__address--blue">Режим работы:</h4>
+              <p class="contacts__address--black">9:00 - 18:00 без выходных</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
