Create questions and footer, beginning adaptive

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
       <div class="header__row">
         <h1 class="header__logo"><img src="assets/img/header/logo.png" alt="logo"></h1>
         <p class="header__city">Остекление балконов и лоджий
-          в Москве и Московской области</p>
+          в&nbsp;Москве&nbsp;и&nbsp;Московской области</p>
         <button class="header__call"><img src="assets/img/header/call.png"> <span>Вызвать замерщика</span></button>
         <div class="header__time">
           <img src="assets/img/header/clock.png" alt="clock">
           <div class="header__time--timer">
             <p>без выходных</p>
-            <p>9:00-18:00</p>
+            <p>9:00 - 18:00</p>
           </div>
         </div>
         <div class="header__phone">
           <img src="assets/img/header/phone.png" alt="">
           <div class="header__phone--anchor">
-            <a href="tel:+74956466171" class="header__phone--anchor--black">+7(495)646-61-71</a>
+            <a href="tel:+74956466171" class="header__phone--anchor--black">+7 (495) 646-61-71</a>
             <a href="#" class="header__phone--anchor--blue">Заказать обратный звонок</a>
           </div>
 
@@ -346,7 +346,7 @@
             </li>
             <li>
               <h4 class="contacts__address--blue">E-mail:</h4>
-              <p class="contacts__address--black"><a href="#">info@irvasokna.ru</a> </p>
+              <a href="#" class="contacts__address--black">info@irvasokna.ru</a>
             </li>
             <li>
               <h4 class="contacts__address--blue">Режим работы:</h4>
@@ -357,6 +357,29 @@
       </div>
     </div>
   </section>
+  <section class="questions">
+    <div class="container">
+      <div class="questions__wrapper">
+        <p  class="questions__problem">Остались вопросы?</p>
+        <a class="questions__solution" href="tel:+74956466171">Спросите у нашего специалиста!</a>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__wrapper">
+        <div class="footer__copyright">
+          <p>2017 © Ирвас окна</p>
+          <p>Работаем без выходных</p>
+        </div>
+        <div class="footer__logo"> <img src="assets/img/header/logo.png" alt="#"></div>
+        <div class="footer__contacts">
+          <a href="tel:+74956466171" class="footer__contacts--black">+7(495)646-61-71</a>
+          <a href="#" class="footer__contacts--blue">info@irvasokna.ru</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
